# lipro-hass

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_COMMIT_MESSAGE.txt  CODE_OF_CONDUCT.md  CODE_QUALITY_FIX_SUMMARY.md  CODE_QUALITY_REVIEW.md  CONTRIBUTING.md  LICENSE  QUALITY_FIX_COMMIT.txt  README.md  README_zh.md  REFACTOR_COMMIT.txt  SECURITY.md  SUPPORT.md  TEST_AUDIT_REPORT.md  TEST_STATUS.md  agent.md  hacs.json  install.sh  pyproject.toml  requirements.txt
.benchmarks/Linux-CPython-3.13-64bit/: 0001_baseline.json
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  hacs.yml  hassfest.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md  v1.12-MILESTONE-AUDIT.md  v1.13-MILESTONE-AUDIT.md  v1.14-MILESTONE-AUDIT.md  v1.15-MILESTONE-AUDIT.md  v1.16-MILESTONE-AUDIT.md  v1.17-MILESTONE-AUDIT.md  v1.18-MILESTONE-AUDIT.md  v1.19-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.20-MILESTONE-AUDIT.md  v1.21-MILESTONE-AUDIT.md  v1.22-MILESTONE-AUDIT.md  v1.23-MILESTONE-AUDIT.md  v1.24-MILESTONE-AUDIT.md  v1.25-MILESTONE-AUDIT.md  v1.26-MILESTONE-AUDIT.md  v1.27-MILESTONE-AUDIT.md  v1.28-MILESTONE-AUDIT.md  v1.29-MILESTONE-AUDIT.md  v1.3-HANDOFF.md  v1.3-MILESTONE-AUDIT.md  v1.30-MILESTONE-AUDIT.md  v1.31-MILESTONE-AUDIT.md  v1.32-MILESTONE-AUDIT.md  v1.33-MILESTONE-AUDIT.md  v1.34-MILESTONE-AUDIT.md  v1.35-MILESTONE-AUDIT.md  v1.36-MILESTONE-AUDIT.md  v1.37-MILESTONE-AUDIT.md  v1.38-MILESTONE-AUDIT.md  v1.39-MILESTONE-AUDIT.md  v1.4-MILESTONE-AUDIT.md  v1.40-MILESTONE-AUDIT.md  v1.41-MILESTONE-AUDIT.md  (+4 more)
.planning/baseline/: ARCHITECTURE_POLICY.md  AUTHORITY_MATRIX.md  DEPENDENCY_MATRIX.md  GOVERNANCE_REGISTRY.json  PUBLIC_SURFACES.md  TARGET_TOPOLOGY.md  VERIFICATION_MATRIX.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  README.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.12-REQUIREMENTS.md  v1.12-ROADMAP.md  v1.13-REQUIREMENTS.md  v1.13-ROADMAP.md  v1.14-REQUIREMENTS.md  v1.14-ROADMAP.md  v1.15-REQUIREMENTS.md  v1.15-ROADMAP.md  v1.16-REQUIREMENTS.md  v1.16-ROADMAP.md  v1.17-REQUIREMENTS.md  v1.17-ROADMAP.md  v1.18-REQUIREMENTS.md  v1.18-ROADMAP.md  v1.19-REQUIREMENTS.md  v1.19-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.20-REQUIREMENTS.md  v1.20-ROADMAP.md  v1.21-REQUIREMENTS.md  v1.21-ROADMAP.md  v1.22-REQUIREMENTS.md  v1.22-ROADMAP.md  v1.23-REQUIREMENTS.md  v1.23-ROADMAP.md  v1.24-REQUIREMENTS.md  v1.24-ROADMAP.md  v1.25-REQUIREMENTS.md  v1.25-ROADMAP.md  v1.26-REQUIREMENTS.md  v1.26-ROADMAP.md  v1.27-REQUIREMENTS.md  v1.27-ROADMAP.md  v1.28-REQUIREMENTS.md  v1.28-ROADMAP.md  v1.29-REQUIREMENTS.md  (+30 more)
.planning/phases/: 21-24-v1.2-closeout-strategy.md
.planning/reviews/: FILE_MATRIX.md  KILL_LIST.md  PROMOTED_PHASE_ASSETS.md  README.md  RESIDUAL_LEDGER.md  V1_10_MILESTONE_SEED.md  V1_11_MILESTONE_SEED.md  V1_12_EVIDENCE_INDEX.md  V1_12_MILESTONE_SEED.md  V1_13_EVIDENCE_INDEX.md  V1_14_EVIDENCE_INDEX.md  V1_15_EVIDENCE_INDEX.md  V1_16_EVIDENCE_INDEX.md  V1_17_EVIDENCE_INDEX.md  V1_18_EVIDENCE_INDEX.md  V1_18_TERMINAL_AUDIT.md  V1_19_EVIDENCE_INDEX.md  V1_19_TERMINAL_AUDIT.md  V1_1_EVIDENCE_INDEX.md  V1_20_EVIDENCE_INDEX.md  V1_21_EVIDENCE_INDEX.md  V1_22_EVIDENCE_INDEX.md  V1_23_EVIDENCE_INDEX.md  (+30 more)
docs/: ARCHITECTURE_DIAGRAMS.md  AUDIT_ISSUES_CHECKLIST.md  AUDIT_REVIEW_2026-03-12.md  BEST_PRACTICES_RESEARCH.md  CLEANUP_REPORT.md  CODE_QUALITY_AUDIT.md  CODE_REVIEW_CONFIG_HELPERS.md  CODE_REVIEW_CORE.md  CODE_REVIEW_PLATFORMS.md  COMPREHENSIVE_AUDIT_2026-03-12.md  COMPREHENSIVE_AUDIT_2026-03-13.md  CONTRIBUTOR_ARCHITECTURE_CHANGE_MAP.md  DOCS_CLEANUP_REPORT.md  FINAL_CLOSEOUT_REPORT_2026-03-13.md  FINAL_SUMMARY.md  MAINTAINER_RELEASE_RUNBOOK.md  MIGRATION_GUIDE.md  NORTH_STAR_EXECUTION_PLAN_2026-03-12.md  NORTH_STAR_TARGET_ARCHITECTURE.md  PARALLEL_REFACTOR_PLAN.md  PERFECT_ARCHITECTURE_PLAN.md  PERFORMANCE_REPORT.md  QUALITY_DASHBOARD.md  QUALITY_FIX_REPORT.md  QUALITY_INDEX.md  QUALITY_ISSUES_TRACKER.md  QUALITY_REVIEW_REPORT.md  QUALITY_ROADMAP.md  README.md  REFACTOR_FINAL_SUMMARY.md  REFACTOR_MASTER_PLAN.md  REFACTOR_QUALITY_REPORT.md  TEST_FIX_REPORT.md  TROUBLESHOOTING.md  architecture_archive.md  developer_architecture.md  developer_testing_guide.md  firmware_support_matrix.md  firmware_support_matrix_zh.md  optimization_todo.md  (+2 more)
scripts/: __init__.py  agent_worker.py  check_architecture_policy.py  check_benchmark_baseline.py  check_file_matrix.py  check_file_matrix_inventory.py  check_file_matrix_markdown.py  check_file_matrix_registry.py  check_file_matrix_registry_classifiers.py  check_file_matrix_registry_overrides.py  check_file_matrix_registry_shared.py  check_file_matrix_validation.py  check_markdown_links.py  check_translations.py  coverage_diff.py  develop  export_ai_debug_evidence_pack.py  lint  orchestrator.py  refactor_tools.py  setup
tests/: __init__.py  conftest.py  conftest_shared.py  coordinator_double.py  test_anonymous_share.py  test_api.py  test_api_command_service.py  test_api_schedule_service.py  test_api_status_service.py  test_auth.py  test_background_task_manager.py  test_binary_sensor.py  test_blueprints.py  test_boundary_conditions.py  test_categories.py  test_climate.py  test_command_dispatch.py  test_command_result.py  test_command_trace.py  test_commands_reexport.py  test_config_flow.py  test_coordinator.py  test_coordinator_compatibility.py  test_coordinator_integration.py  test_coordinator_public.py  test_coordinator_runtime.py  test_coordinator_v2.py  test_cover.py  test_debounce.py  test_developer_report.py  test_device.py  test_device_identity_index.py  test_device_refresh.py  test_device_registry_sync.py  test_diagnostics.py  test_entity_base.py  test_entity_behavior.py  test_fan.py  test_group_status.py  test_helpers.py  (+34 more)
(+2667 files in other folders)
