[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lipro-smart-home"
version = "1.0.0"
description = "Home Assistant integration for Lipro Smart Home devices"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13.2"
authors = [
    {name = "Exlany"},
]
keywords = ["homeassistant", "lipro", "smart-home", "home-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]

dependencies = [
    "aiohttp>=3.12.0",
    "aiomqtt>=2.0.0",
    "pycryptodome>=3.19.0",
    "voluptuous>=0.15.2",
]

[project.optional-dependencies]
dev = [
    "colorlog==6.10.1",
    "homeassistant==2025.10.2",
    "pip>=21.3.1",
    "ruff==0.15.1",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "mypy>=1.0.0",
    "aiodns>=3.3.0",
    "pycares<6.0.0",
]

[project.urls]
Homepage = "https://github.com/Exlany/lipro-hass"
Repository = "https://github.com/Exlany/lipro-hass"
Issues = "https://github.com/Exlany/lipro-hass/issues"
Changelog = "https://github.com/Exlany/lipro-hass/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["custom_components"]
markers = [
    "github: tests specifically for GitHub Actions CI",
    "integration: tests requiring external services or full HA environment",
    "slow: tests that take longer to run",
]
filterwarnings = [
    # Suppress DeprecationWarnings from third-party dependencies only;
    # our own code should not trigger deprecation warnings.
    "ignore::DeprecationWarning:homeassistant",
    "ignore::DeprecationWarning:aiohttp",
    "ignore::DeprecationWarning:aiomqtt",
    "ignore::DeprecationWarning:voluptuous",
    "ignore::DeprecationWarning:pytest_homeassistant_custom_component",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.ruff]
# Match Home Assistant Core's ruff configuration (2026.2)
required-version = ">=0.14.13"
target-version = "py313"

[tool.ruff.lint]
# Following Home Assistant Core's ruff configuration (2026.2)
select = [
    "A001",    # Variable {name} is shadowing a Python builtin
    "ASYNC",   # flake8-async
    "B002",    # Python does not support the unary prefix increment
    "B005",    # Using .strip() with multi-character strings is misleading
    "B007",    # Loop control variable {name} not used within loop body
    "B009",    # Do not call getattr with a constant attribute value
    "B014",    # Exception handler with duplicate exception
    "B015",    # Pointless comparison
    "B017",    # pytest.raises(BaseException) should be considered evil
    "B018",    # Found useless attribute access
    "B023",    # Function definition does not bind loop variable {name}
    "B024",    # Abstract base class with no abstract methods
    "B026",    # Star-arg unpacking after a keyword argument is discouraged
    "B032",    # Possible unintentional type annotation (using :)
    "B035",    # Dictionary comprehension uses static key
    "B904",    # Use raise from to specify exception cause
    "B905",    # zip() without an explicit strict= parameter
    "BLE",     # flake8-blind-except
    "C",       # complexity
    "COM818",  # Trailing comma on bare tuple prohibited
    "D",       # docstrings
    "DTZ003",  # Use datetime.now(tz=) instead of datetime.utcnow()
    "DTZ004",  # Use datetime.fromtimestamp(ts, tz=) instead
    "E",       # pycodestyle
    "F",       # pyflakes/autoflake
    "F541",    # f-string without any placeholders
    "FLY",     # flynt
    "FURB",    # refurb
    "G",       # flake8-logging-format
    "I",       # isort
    "INP",     # flake8-no-pep420
    "ISC",     # flake8-implicit-str-concat
    "ICN001",  # import conventions; {name} should be imported as {asname}
    "LOG",     # flake8-logging
    "N804",    # First argument of a class method should be named cls
    "N805",    # First argument of a method should be named self
    "N815",    # Variable {name} in class scope should not be mixedCase
    "PERF",    # Perflint
    "PGH",     # pygrep-hooks
    "PIE",     # flake8-pie
    "PL",      # pylint
    "PT",      # flake8-pytest-style
    "PTH",     # flake8-pathlib
    "PYI",     # flake8-pyi
    "RET",     # flake8-return
    "RSE",     # flake8-raise
    "RUF005",  # Consider iterable unpacking instead of concatenation
    "RUF006",  # Store a reference to the return value of asyncio.create_task
    "RUF007",  # Prefer itertools.pairwise() over zip()
    "RUF008",  # Do not use mutable default values for dataclass attributes
    "RUF010",  # Use explicit conversion flag
    "RUF013",  # PEP 484 prohibits implicit Optional
    "RUF016",  # Slice in indexed access uses wrong type
    "RUF017",  # Avoid quadratic list summation
    "RUF018",  # Avoid assignment expressions in assert statements
    "RUF019",  # Unnecessary key check before dictionary access
    "RUF020",  # {never_like} | T is equivalent to T
    "RUF021",  # Parenthesize a and b expressions when chaining
    "RUF022",  # Sort __all__
    "RUF023",  # Sort __slots__
    "RUF024",  # Do not pass mutable objects as values to dict.fromkeys
    "RUF026",  # default_factory is a positional-only argument to defaultdict
    "RUF030",  # print() call in assert statement is likely unintentional
    "RUF032",  # Decimal() called with float literal argument
    "RUF033",  # __post_init__ method with argument defaults
    "RUF034",  # Useless if-else condition
    "RUF059",  # unused-unpacked-variable
    "RUF100",  # Unused `noqa` directive
    "RUF101",  # noqa directives that use redirected rule codes
    "RUF200",  # Failed to parse pyproject.toml
    "S102",    # Use of exec detected
    "S103",    # bad-file-permissions
    "S108",    # hardcoded-temp-file
    "S306",    # suspicious-mktemp-usage
    "S307",    # suspicious-eval-usage
    "S313",    # suspicious-xmlc-element-tree-usage
    "S314",    # suspicious-xml-element-tree-usage
    "S315",    # suspicious-xml-expat-reader-usage
    "S316",    # suspicious-xml-expat-builder-usage
    "S317",    # suspicious-xml-sax-usage
    "S318",    # suspicious-xml-mini-dom-usage
    "S319",    # suspicious-xml-pull-dom-usage
    "S601",    # paramiko-call
    "S602",    # subprocess-popen-with-shell-equals-true
    "S604",    # call-with-shell-equals-true
    "S608",    # hardcoded-sql-expression
    "S609",    # unix-command-wildcard-injection
    "SIM",     # flake8-simplify
    "SLF",     # flake8-self
    "SLOT",    # flake8-slots
    "T100",    # Trace found: {name} used
    "T20",     # flake8-print
    "TC",      # flake8-type-checking
    "TID",     # Tidy imports
    "TRY",     # tryceratops
    "UP",      # pyupgrade
    "UP031",   # Use format specifiers instead of percent format
    "UP032",   # Use f-string instead of `format` call
    "W",       # pycodestyle
]
ignore = [
    # Async (HA patterns)
    "ASYNC109",  # Async function definition with a `timeout` parameter
    "ASYNC110",  # Use `asyncio.Event` instead of awaiting `asyncio.sleep` in a `while` loop

    # Docstring style (HA uses Google style)
    "D202",    # No blank lines allowed after function docstring
    "D203",    # 1 blank line required before class docstring
    "D213",    # Multi-line docstring summary should start at the second line
    "D406",    # Section name should end with a newline
    "D407",    # Section name underlining
    "D417",    # Missing argument descriptions in docstring

    # Line length (handled by formatter)
    "E501",    # line too long

    # Pylint complexity (reasonable for integrations)
    "PLC1901",  # can be simplified as an empty string is falsey
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments to function call
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison
    "PLW1641",  # __eq__ without __hash__
    "PLW2901",  # Outer variable overwritten by inner target

    # Pytest style
    "PT011",   # pytest.raises is too broad
    "PT018",   # Assertion should be broken down into multiple parts

    # Ruff specific
    "RUF001",  # String contains ambiguous unicode character
    "RUF002",  # Docstring contains ambiguous unicode character
    "RUF003",  # Comment contains ambiguous unicode character
    "RUF015",  # Prefer next(...) over single element slice

    # Simplify (sometimes reduces readability)
    "SIM102",  # Use a single if statement instead of nested if statements
    "SIM103",  # Return the condition directly
    "SIM108",  # Use ternary operator instead of if-else-block
    "SIM115",  # Use context handler for opening files

    # Moving imports into type-checking blocks can mess with pytest.patch()
    "TC001",   # Move application import into a type-checking block
    "TC002",   # Move third-party import into a type-checking block
    "TC003",   # Move standard library import into a type-checking block
    "TC006",   # Add quotes to type expression in typing.cast()

    # Tryceratops (per HA)
    "TRY003",  # Avoid specifying long messages outside the exception class
    "TRY300",  # Consider moving statement to an `else` block (HA pattern)
    "TRY301",  # Abstract `raise` to an inner function (HA pattern)
    "TRY400",  # Use `logging.exception` instead of `logging.error`
    "TRY401",  # Redundant exception object in `logging.exception` call

    # Performance (HA pattern - explicit loops are clearer)
    "PERF401", # Use a list comprehension to create a transformed list

    # Pyupgrade - PEP 695 (we use PEP 695, but keep UP049 ignored)
    "UP049",   # Avoid private type parameter names

    # Formatter conflicts (required per HA)
    "W191",    # tab-indentation
    "E111",    # indentation-with-invalid-multiple
    "E114",    # indentation-with-invalid-multiple-comment
    "E117",    # over-indented
    "D206",    # indent-with-spaces
    "D300",    # triple-single-quotes
    "Q",       # flake8-quotes
    "COM812",  # missing-trailing-comma
    "COM819",  # prohibited-trailing-comma

    # Disabled because ruff does not understand type of __all__ generated by a function
    "PLE0605", # invalid-all-format

    # Refurb
    "FURB116", # f-string-number-format

    # Security (required by Lipro API)
    "S324",    # hashlib-insecure-hash-function (MD5 required by API)
]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
voluptuous = "vol"
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.util.dt" = "dt_util"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"async_timeout".msg = "use asyncio.timeout instead"
"pytz".msg = "use zoneinfo instead"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["homeassistant", "custom_components.lipro"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 25
max-returns = 10
max-statements = 50

[tool.ruff.lint.per-file-ignores]
# Test files have different requirements
"tests/**/*.py" = [
    "S101",    # assert (required for pytest)
    "D",       # pydocstyle (tests don't need full docstrings)
    "SLF001",  # private-member-access
    "PLR2004", # magic-value-comparison
    "PLC0415", # import-outside-top-level
    "E402",    # module-level-import-not-at-top (conditional imports for optional deps)
]
# Custom components use relative imports (standard for HA integrations)
"custom_components/**/*.py" = [
    "TID252",  # relative-imports (standard for HA integrations)
    "PTH",     # flake8-use-pathlib (HA patterns)
]
